syntax="proto3";

package hwscGrpcSampleSvc;

option go_package="hwscGrpcSampleSvcPb";

// TODO Convert to our own timestamp until resolve
// https://github.com/faraonc/hwsc-gateway-svc/issues/37
message Timestamp {
    // Represents seconds of UTC time since Unix epoch
    // 1970-01-01T00:00:00Z. Must be from 0001-01-01T00:00:00Z to
    // 9999-12-31T23:59:59Z inclusive.
    int64 seconds = 1;

    // Non-negative fractions of a second at nanosecond resolution. Negative
    // second values with fractions must still have non-negative nanos values
    // that count forward in time. Must be from 0 to 999,999,999
    // inclusive.
    int32 nanos = 2;
}

// The SampleService service definition.
service SampleService {
    // Sends a greeting
    rpc SayHello (SampleServiceRequest) returns (SampleServiceResponse) {}
}

// The SampleService request message containing the user's name.
message SampleServiceRequest {
    string first_name = 1;
    Timestamp create_timestamp = 2;
}

// The SampleService response message containing the greetings.
message SampleServiceResponse {
    string message = 1;
    Timestamp response_timestamp = 2;
}
